@@ -96,6 +96,7 @@
 <%= link_to image_tag('gentleface/16/mail.png', alt: '') + 'Create Mailing', new_mailing_path(patient_id: @patient.id), class: 'button positive' %>
 <%= link_to image_tag('gentleface/16/phone_1.png', alt: '') + 'Create Call', new_call_path(patient_id: @patient.id), class: 'button positive' %>
 <%= link_to image_tag('gentleface/16/cert.png', alt: '') + 'Create Evaluation', new_evaluation_path(patient_id: @patient.id), class: 'button positive' %>
+
 <%= link_to image_tag('gentleface/16/users.png', alt: '') + 'Create Visit', new_visit_path(patient_id: @patient.id), class: 'button positive' %>
 
 <div style="clear:both"></div>
