@@ -27,7 +27,7 @@ class CallsControllerTest < ActionController::TestCase
 
   test "should create call" do
     assert_difference('Call.count') do
-      post :create, call: { patient_id: @call.patient_id }, call_date: "02/28/2012", call_time: "5:45pm"
+      post :create, call: { patient_id: @call.patient_id, call_type: choices(:call_type), direction: 'incoming' }, call_date: "02/28/2012", call_time: "5:45pm"
     end
 
     assert_redirected_to patient_path(assigns(:call).patient)
@@ -55,12 +55,12 @@ class CallsControllerTest < ActionController::TestCase
   end
 
   test "should update call" do
-    put :update, id: @call, call: { patient_id: @call.patient_id }, call_date: "02/28/2012", call_time: "5:50pm"
+    put :update, id: @call, call: { patient_id: @call.patient_id, call_type: choices(:call_type), direction: 'incoming' }, call_date: "02/28/2012", call_time: "5:50pm"
     assert_redirected_to call_path(assigns(:call))
   end
 
   test "should not update call with blank call date" do
-    put :update, id: @call, call: { patient_id: @call.patient_id }, call_date: "", call_time: "5:50pm"
+    put :update, id: @call, call: { patient_id: @call.patient_id, call_type: choices(:call_type), direction: 'incoming' }, call_date: "", call_time: "5:50pm"
     assert_not_nil assigns(:call)
     assert assigns(:call).errors.size > 0
     assert_equal ["can't be blank"], assigns(:call).errors[:call_time]
